# ds-cobot-auto-driving-real

./: .gitignore  README.md
rokeypj_ws/src/aruco_yolo/: package.xml  setup.cfg  setup.py
rokeypj_ws/src/aruco_yolo/aruco_yolo/: aruco_detector.py  aruco_move.py  aruco_pick_and_place.py  camera_info.py  camera_pub.py  compressed_image_pub.0519.py  compressed_image_pub.0521.py  compressed_image_pub.0616.py  compressed_image_pub.py  compressed_image_pub.py.org  pick_and_place.0520.py  pick_and_place.py  pick_and_place_sample.py  temp.py  turtlebot3_manipulation_teleop.py  turtlebot3_manipulation_xyz_limit.py  yolo_detector.py
rokeypj_ws/src/aruco_yolo/config/: calibration_params.txt  calibration_params.yaml  calibration_params.yaml.640.480  calibration_params.yaml.compressed  calibration_params.yaml.org  camera_params.yaml
rokeypj_ws/src/aruco_yolo/launch/: aruco_detect.launch.py  aruco_last.launch.py  (+12 more)
rokeypj_ws/src/fsd_pkg/: package.xml  setup.cfg  setup.py
rokeypj_ws/src/sample_pkg/: package.xml  setup.py
rokeypj_ws/src/turtlebot_moveit/turtlebot_moveit/: CMakeLists.txt  config.tar  package.xml
rokeypj_ws/src/turtlebot_moveit/turtlebot_moveit/config/: turtlebot3_manipulation.srdf
rokeypj_ws/src/turtlebot_moveit/turtlebot_moveit/launch/: move_group.launch.py
rokeypj_ws/src/turtlebot_moveit/turtlebot_moveit/scripts/: gripper_open_close.py  project_sample.py  srv_call_test.py  task.py
rokeypj_ws/src/turtlebot_moveit/turtlebot_moveit/src/: get_eef_pose.cpp  turtlebot_arm_controller.cpp  turtlebot_moveit.cpp
rokeyracing_ws/src/: turtlebot3_teleop.tar
rokeyracing_ws/src/turtlebot3_autorace_camera/: package.xml  setup.py
rokeyracing_ws/src/turtlebot3_autorace_detect/: setup.py
rokeyracing_ws/src/turtlebot3_autorace_driving/: package.xml  setup.cfg  setup.py
rokeyracing_ws/src/turtlebot3_autorace_tracking/: package.xml  setup.cfg  setup.py
rokeyracing_ws/src/turtlebot3_fsd/: package.xml  setup.cfg  setup.py
(+122 files in other folders)
